fixed virtual stage visibility issue

--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,8 @@
 body {
    background-color: black;
-   color: white;
    display: grid;
    place-items: center;
    height: 100vh;
-   color: white;
    font-family: "Quicksand";
    font-size: 5rem;
    font-weight: 700;
